# curator-bot

./: .env.example  .gitignore  .pylintrc  CHANGELOG  Dockerfile  README.md  main.py  pyproject.toml
curator/: db.py  embed.py  helpers.py  strings.py
tests/: conftest.py  test_strings.py
tests/mocks/: discord.py
