[tool.poetry]
name = "curator-bot"
version = "1.0.0"
description = "Discord bot that curates messages posted by members."
authors = ["Ruud Schroën"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
py-cord = "^2.4.1"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pylint = "^2.17.2"
pytest = "^7.2.2"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
